--- a/Appceptability/Views/Base.lproj/LaunchScreen.storyboard
+++ b/Appceptability/Views/Base.lproj/LaunchScreen.storyboard
@@ -14,7 +14,25 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="0.27058823529999998" green="0.47833834809999998" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Appceptability" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1pU-oK-s7j">
+                                <rect key="frame" x="37" y="380" width="340" height="118.5"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="1pU-oK-s7j" secondAttribute="height" multiplier="341:136" id="VRd-Zl-r8D"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Zapfino" family="Zapfino" pointSize="35"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="tintColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <constraints>
+                            <constraint firstItem="1pU-oK-s7j" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="336" id="3Rd-SZ-4fu"/>
+                            <constraint firstItem="1pU-oK-s7j" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="FPm-eu-HKP"/>
+                            <constraint firstItem="1pU-oK-s7j" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="37" id="GfN-Ve-ZaQ"/>
+                            <constraint firstItem="1pU-oK-s7j" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="T1q-kU-9Gp"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
